--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>test world</h1> 
+    <nav>
+        <div id="logo">
+            <span>丸龜製麵</span>
+        </div>
+        <div id="">
+            <a href="">關於丸龜</a>
+            <a href="">最新消息</a>
+            <a href="">聯絡我們</a>
+        </div>
+    </nav> 
 </body>
 </html>
