--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="logo">
             <span>丸龜製麵</span>
         </div>
-        <div id="">
+        <div id="nav">
             <a href="">關於丸龜</a>
             <a href="">最新消息</a>
             <a href="">聯絡我們</a>
