--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
         </div>
     </nav> 
 
-    <div id="banner"></div>
+    <div id="banner">
+        <div>
+            <h4>夏季新品</h4>
+            <h1>田園雞湯麵</h1>
+        </div>
+    </div>
 
     <section>
         <h1>
