--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="zh">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>丸龜製麵</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <nav>
         <div id="logo">
             <span>丸龜製麵</span>
         </div>
+        <div></div>
         <div id="na">
             <a href="">關於丸龜</a>
             <a href="">最新消息</a>
             <a href="">聯絡我們</a>
         </div>
-    </nav> 
+    </nav>
 
     <div id="banner">
         <div>
@@ -25,42 +28,66 @@
         </div>
     </div>
 
-    <section>
-        <h1>
-            關於丸龜
-        </h1>
-        <p>丸亀製麵的起源：
-            創辦人-粟田貴也
-            粟田貴也先生的父親出身自日本香川縣丸亀市，而香川縣以讚岐烏龍麵聞名，讚岐烏龍麵的特色是用手打法製成粗麵條，特別有咬勁，擁有爽口彈牙美味。 粟田貴也以父親的 口味作為出發點，打造出丸亀製麵，成為全球最大的日本烏龍麵連鎖店。
-            
-            丸亀製麵於2013年正式登陸台灣， 不論日本當地、以至
-            全球，丸亀製麵都佔據領先地位。
-            堅持以現點現做的做法及讚岐式點餐， 提供顧客最新鮮、
-            最道地的烏龍麵。
-        </p>
+    <section id="about">
+        <h1>關於丸龜</h1>
+        <hr>
+        <div>
+            <div id="img"></div>
+            <p>丸亀製麵的起源：<br>
+                創辦人-粟田貴也
+                粟田貴也先生的父親出身自日本香川縣丸亀市，而香川縣以讚岐烏龍麵聞名，讚岐烏龍麵的特色是用手打法製成粗麵條，特別有咬勁，擁有爽口彈牙美味。 粟田貴也以父親的
+                口味作為出發點，打造出丸亀製麵，成為全球最大的日本烏龍麵連鎖店。
+
+                丸亀製麵於2013年正式登陸台灣， 不論日本當地、以至
+                全球，丸亀製麵都佔據領先地位。
+                堅持以現點現做的做法及讚岐式點餐， 提供顧客最新鮮、
+                最道地的烏龍麵。
+            </p>
+        </div>
     </section>
 
-    <section>
+    <section id="news">
         <h1>最新消息</h1>
+        <hr>
         <ul>
+            <span>2020.05.10</span>
             <li>【四月滿意調查表抽獎公佈】</li>
+            <span>2020.05.10</span>
             <li>【2020母親節套餐5/5開始於全門市販售】</li>
+            <span>2020.05.10</span>
             <li>【三月滿意調查表抽獎公佈】</li>
+            <span>2020.05.10</span>
             <li>【新門市開幕】中壢大潤發門市４／２１（二）新開幕</li>
+            <span>2020.05.10</span>
             <li>【開幕活動】歡慶新光三越台北站前門市４／１５重新開幕</li>
         </ul>
+        <a href="">查看更多</a>
     </section>
 
-    <section>
+    <section id="contant">
         <h1>聯絡我們</h1>
-        <p>如果您在本公司用餐上有任何寶貴的意見和建議，或是有任何資訊想了解，
-            歡迎您利用本網站─『聯絡我們』留言反映，或以電郵方式與我們聯絡。
+        <hr>
+        <pre>
+            如果您在本公司用餐上有任何寶貴的意見和建議，或是有任何資訊想了解，歡迎您利用本網站─『聯絡我們』留言反映，或以電郵方式與我們聯絡。
             我們必將虛心接受並檢討改進，衷心期盼您再度光臨與指教，謝謝。
             
             台灣東利多 丸亀製麵 敬上
             電郵：service@toridoll.com.tw
             客服專線：0800-000-063
-        </p>
+        </pre>
+
+        <form action="POST">
+            <input type="text" name="name" id="name" placeholder="請輸入您的姓名">
+            <input type="text" name="email" id="email" placeholder="請輸入您的信箱">
+            <textarea name="message" id="message"></textarea>
+            <input type="submit" value="送出" id="submit"> 
+        </form>
     </section>
+
+
+    <div id="footer">
+        <p></p>
+    </div>
 </body>
+
 </html>
