--- a/index.html
+++ b/index.html
@@ -67,27 +67,32 @@
     <section id="contant">
         <h1>聯絡我們</h1>
         <hr>
-        <pre>
+        <p>
             如果您在本公司用餐上有任何寶貴的意見和建議，或是有任何資訊想了解，歡迎您利用本網站─『聯絡我們』留言反映，或以電郵方式與我們聯絡。
+            <br>
             我們必將虛心接受並檢討改進，衷心期盼您再度光臨與指教，謝謝。
-            
+            <br>
             台灣東利多 丸亀製麵 敬上
+            <br>
             電郵：service@toridoll.com.tw
+            <br>
             客服專線：0800-000-063
-        </pre>
+        </p>
 
         <form action="POST">
-            <input type="text" name="name" id="name" placeholder="請輸入您的姓名">
-            <input type="text" name="email" id="email" placeholder="請輸入您的信箱">
-            <textarea name="message" id="message"></textarea>
-            <input type="submit" value="送出" id="submit"> 
+            <div>
+                <input type="text" name="name" id="name" placeholder="請輸入您的姓名">
+                <input type="text" name="email" id="email" placeholder="請輸入您的信箱">
+                <textarea name="message" id="message"></textarea>
+            </div>
+            <input type="submit" value="送出" id="submit">
         </form>
     </section>
 
 
-    <div id="footer">
-        <p></p>
-    </div>
+    <footer>
+        &copy;2018 - 2020 <p>丸龜製麵</p> All rights reserved
+    </footer>
 </body>
 
 </html>
