--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>丸龜製麵</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -15,9 +16,9 @@
         </div>
         <div></div>
         <div id="na">
-            <a href="">關於丸龜</a>
-            <a href="">最新消息</a>
-            <a href="">聯絡我們</a>
+            <a href="#about">關於丸龜</a>
+            <a href="#news">最新消息</a>
+            <a href="#contant">聯絡我們</a>
         </div>
     </nav>
 
@@ -91,7 +92,7 @@
 
 
     <footer>
-        &copy;2018 - 2020 <p>丸龜製麵</p> All rights reserved
+        &copy;2018 - 2020 <span>丸龜製麵</span> All rights reserved
     </footer>
 </body>
 
